# yuubot

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent_read.py  config.example.yaml  design.md  docker-compose.yml  docker_config.yaml  install.sh  llm.example.yaml  llm.yaml  main.py  pyproject.toml  refactor.md  skills-lock.json  summarizer优化.md  task-sub-vendors.md  task.md  test.md  todo.md  yuuagents.config.yaml
.agents/skills/: python-purist
analysis/: traces_analysis.md
apis/: yuuagents.md  yuullm.md  yuutools.md
apps/yuubot/: AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  llm.example.yaml  main.py  pyproject.toml
demo/: FRONTEND_SELECTION.md  actors.html  characters.html  chat.html  index.html  integrations.html  monitor.html  providers.html  routes.html  settings.html
demo/css/: style.css
design/: actor-message-loop.md  addons.md  architecture.md  bridge.md  checklist.md  commands.md  concurrency.md  config-system.md  config.md  constitution.md  daemon.md  database.md  design.md  directory.md  export-import.md  gateway.md  issue.md  issues.md  kanban.md  mate.md  napcat.md  ops.md  plan.md  recorder.md  requirements.md  roadmap.md  sessions.md  skills.md  startup.md  system-design.md  target.md  testing.md  web_config_persist.md  yuu-persona.md
design/arch-v2/: 01-system-model.md  02-bootstrap-config.md  03-runtime-resources.md  04-gateway-routing.md  05-admin-ux.md  06-hot-reload.md  07-trace.md  08-bridge.md  09-deployment-security.md  10-migration-plan.md  11-api-design.md  README.md
design/archive/: README.md  design.md  lifecycle.md  service-surface.md
design/conventions/: python-execution-env.md
design/deployment/: deployment-design.md
design/frontend-migrate/: 01-contract-and-navigation.md  02-provider-llm-onboarding.md  03-actor-authoring.md  04-conversation-workflow.md  05-resources-routes-integrations-capabilities.md  06-workspace-kv-tasks-runtime.md  README.md
design/llm/: provider-core.md
design/services/: 01-runtime-events.md  02-admin-boundary.md  03-inbound.md  04-tasks.md  05-share.md  06-kv.md  07-cron.md  08-python-kernel.md  09-observability.md  10-data-sources.md  README.md
docker/: entrypoint.sh
docs/: server-deploy.md
issues/: 012-silent-error-recovery.md  013-docker-deploy-hardening.md  014-model_resolution-fail.md  015-monitor-panel-crash.md  checklist.md  todo-integration-external-plugin.md  todo-integration-plugin-mechanism.md  todo-integration-runtime-storage.md  todo-integration-secret-config.md  todo-trace-cost-backend.md
roadmap/: Roadmap v2.md  backlog.md  charter.md  constitution.md  milestones.md  sprint.md
scripts/: auto-retry.py  conv.py  ctx.py  deploy-server.sh  deps.yaml  enhance_images.py  install-deps.sh  reproduce_gateway_request.py  sandbox_exit_hang_bench.py
src/tim/: _channel.py
src/yb/: fixer.py  (+11 more)
tests/: conftest.py  framework.py  helpers.py  mocks.py  test_actor_ingress_rule_lifecycle.py  test_actor_lifecycle.py  test_actor_message_loop.py  test_actor_prompt.py  test_actor_rollover.py  test_actor_workspace.py  test_actor_workspace_path.py  test_admin_conversation_e2e.py  test_admin_conversation_history_e2e.py  test_admin_integration_kinds.py  test_admin_monitor.py  test_admin_surfaces.py  test_agent_assembly.py  test_agent_runner.py  test_agent_runner_logging.py  test_agent_runner_silence.py  test_agent_runner_timeout_helpers.py  test_ask_user_e2e.py  test_asyncio_util.py  test_auth_attempts.py  test_bash_tool.py  test_builder.py  test_capabilities_contract.py  test_catalog_refresh.py  test_cli_behavior.py  test_cli_dev.py  test_cli_permissions.py  test_cli_process_helpers.py  test_coding_clis.py  test_commands.py  test_config_unification.py  test_conv_script.py  test_conversation.py  test_conversation_events.py  test_conversation_loop_cleanup.py  test_conversation_reconnect.py  (+102 more)
warroom/: actor-architecture-merged.md  assistant-response-content-bug.md  clarify.html  code-progress-report.md  code-review-anti-patterns.md  kanban-position-report.md  web-chat-behind-scenes.html
web/: .gitignore  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+1113 files in other folders)
