[project]
name = "yuubot"
version = "0.1.0"
description = "yuubot architecture-v2 core skeleton"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click",
    "msgspec",
    "python-dotenv",
    "starlette",
    "tortoise-orm",
    "pyyaml",
    "uvicorn",
    "yuuagents",
    "yuutrace",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
ybot = "yuubot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
yuuagents = { path = "../yuuagents", editable = true }
yuutrace = { path = "../yuutrace", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/yuubot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that require real external services/credentials",
]

[tool.ty.environment]
python = "../.venv"
extra-paths = []

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
call-non-callable = "warn"
no-matching-overload = "warn"
call-top-callable = "warn"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
