[project]
name = "yuubot-monorepo"
version = "0.1.0"
description = "Development workspace for yuubot and YuuLabs agent packages"
requires-python = ">=3.14"
dependencies = [
    "yuubot",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/yuubot",
    "packages/yuullm",
    "packages/yuutools",
    "packages/yuutrace",
    "packages/yuuagents",
]

[tool.uv.sources]
yuubot = { workspace = true }
yuullm = { workspace = true }
yuutools = { workspace = true }
yuutrace = { workspace = true }
yuuagents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
