[project]
name = "yuubot"
version = "0.1.0"
description = "Local agent console with web UI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.3",
    "attrs>=26.1.0",
    "cachetools>=7.1.4",
    "cryptography>=48.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "jupyter-client>=8.9.1",
    "mcp>=1.28.1",
    "msgspec>=0.21.1",
    "openai>=2.44.0",
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0",
    "pymupdf4llm>=1.28.0",
    "python-multipart>=0.0.32",
    "pywebpush>=2.3.0",
    "pyyaml>=6.0.3",
    "strip-ansi>=0.1.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
ybot = "yuubot.cli:main"
yuubot = "yuubot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yuubot", "src/yb", "src/yext"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning:websockets\\.legacy",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated:DeprecationWarning:uvicorn\\.protocols\\.websockets\\.websockets_impl",
    "ignore:remove second argument of ws_handler:DeprecationWarning:websockets\\.legacy\\.server",
]
markers = [
    "live: tests that require real external services/credentials",
]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "types-pyyaml>=6.0.12.20260518",
    "ty>=0.0.21",
    "websockets>=16.0",
]

[tool.ty.environment]
python = ".venv"
extra-paths = ["src"]

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
call-non-callable = "warn"
no-matching-overload = "warn"
call-top-callable = "warn"
